--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -186,7 +186,7 @@
   .subscribe 
     width: 100%
   .reviews
-    padding: 20px 0 50px 0
+    padding: 40px 0 50px 0
     &-title
       font-size: 25px
 
@@ -203,13 +203,18 @@
     &-slider
       height: 179px
   .reviews
-    padding: 20px 0 50px 0
+    padding: 40px 0 50px 0
     &-title
       font-size: 18px
+      line-height: 23px
+      width: 245px
+      margin-left: auto
+      margin-right: auto
       margin-bottom: 42px
     &-slider
       &__text
         padding-bottom: 15px
+        text-align: left
       &__button
         &--prev
           left: 45%
