--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -49,10 +49,13 @@
     line-height: 18px
   &__button
     position: absolute
-    min-width: 65px
+    width: 65px
     right: 0
     top: 0
     height: 100%
     border: none
     background-color: $primary
     color: $light
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
