--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -15,6 +15,7 @@
       flex-direction: column
       align-items: center
       max-width: 730px
+      height: 280px
       margin: 45px auto 0
       background-color: #ffffff
       border-radius: 8px
@@ -92,4 +93,14 @@
       line-height: 160%
       text-align: justify
       margin: auto
-
+      overflow: auto
+      padding-right: 7px
+      &::-webkit-scrollbar
+        width: 5px
+      &::-webkit-scrollbar-thumb 
+        background: rgba(0, 0, 0, .1)
+        border-radius: 10px
+        cursor: pointer
+      &::-webkit-scrollbar-thumb
+        &:hover 
+          background: grey
